--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   shadowsocks:
-    image: hopher/shadowsocks-libev
+    image: hopher/shadowsocks-libev:latest
     ports:
       - "8388:8388/tcp"
       - "8388:8388/udp"
