--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     ports:
       - "8388:8388/tcp"
       - "8388:8388/udp"
+    build:
+      context: .
     environment:
       - METHOD=aes-256-gcm
       - PASSWORD=9MLSpPmNt
