update files 2019年 4月15日 星期一 23时05分39秒 CST

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   shadowsocks:
     image: hopher/shadowsocks-libev:latest
+    container_name: my_shadowsocks
     ports:
       - "8388:8388/tcp"
       - "8388:8388/udp"
